--- a/index.html
+++ b/index.html
@@ -44,8 +44,10 @@
         </nav>
     </header>
 
-    <main>
-        
+    <main class="main">
+        <h1 class="titleMain">Música para todos.</h1>
+        <h2 class="subtitleMain">Milhões de músicas a sua escolha. E nem precisa de cartão de crédito.</h2>
+        <button class="btnMain">Obtenha o Spotify FREE</button>
     </main>
     
 </body>
