started second footer part

--- a/index.html
+++ b/index.html
@@ -83,6 +83,25 @@
         </div>
     </footer>
 
-    
+    <footer class="footer-2">
+        <div class="wrapBrazilFlag">
+            <p class="textFooterBrazil">Brasil</p>
+            <img class="brazilFlag" src="assets/brazil-flag.png" alt="Bandeira do Brasil">
+        </div>
+
+        <div class="wrapFooterSecondPart">
+            <div>
+                <p class="textFooter-2">Legal</p>
+                <p class="textFooter-2">Centro de Privacidade</p>
+                <p class="textFooter-2">Política de Privacidade</p>
+                <p class="textFooter-2">Cookies</p>
+                <p class="textFooter-2">Sobre Anúncios</p>
+                <p class="textFooter-2">cessibilidade</p>
+            </div>
+            <div>
+                <p class="textFooter-2">&copy 2023 Spotify AB</p>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
