mobile project concluded, updated html and css files

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                 <p class="textFooter-2">cessibilidade</p>
             </div>
             <div>
-                <p class="textFooter-2">&copy 2023 Spotify AB</p>
+                <p class="textFooterCopyright">&copy 2023 Spotify AB</p>
             </div>
         </div>
     </footer>
