added media file, setup project to 768px +

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 
     <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/media.css">
     
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
@@ -24,22 +25,22 @@
         <nav>
             <i class="fa-solid fa-bars"></i>
             <ul class="hide">
-                <li><a href="#">Premium</a></li>
-                <li><a href="#">Ajuda</a></li>
-                <li><a href="#">Baixar</a></li>
-                <li><a href="#">Inscreva-se</a></li>
-                <li><a href="#">Entrar</a></li>
+                <li>Premium</li>
+                <li>Ajuda</li>
+                <li>Baixar</li>
+                <li>Inscreva-se</li>
+                <li>Entrar</li>
             </ul>
         </nav>
             
         <!-- laptop screen -->
-        <nav class="hide">
-            <ul>
-                <li><a href="#">Premium</a></li>
-                <li><a href="#">Ajuda</a></li>
-                <li><a href="#">Baixar</a></li>
-                <li><a href="#">Inscreva-se</a></li>
-                <li><a href="#">Entrar</a></li>
+        <nav class="hide navMenuDesktop">
+            <ul class="menuDesktop"> 
+                <li class="menuDesktopItem">Premium</li>
+                <li class="menuDesktopItem">Ajuda</li>
+                <li class="menuDesktopItem">Baixar</li>
+                <li class="menuDesktopItem">Inscreva-se</li>
+                <li class="menuDesktopItem">Entrar</li>
             </ul>
         </nav>
     </header>
