updated media file, setup footer-1 and footer-2 for 768px screen sizes

--- a/index.html
+++ b/index.html
@@ -52,31 +52,32 @@
     </main>
     
     <footer class="footer-1">
-        <img class="logo-footer" src="assets/logo-spotify.png" alt="Logo do Spotify">
+        <div class="footerLargerScreens">
+            <img class="logo-footer" src="assets/logo-spotify.png" alt="Logo do Spotify">
         
-        <div class="wrapFooterFirstPart">
-            <div class="company">
-                <h3 class="footer-menu">Empresa</h3>
-                <p class="footer-menu-item">Sobre</p>
-                <p class="footer-menu-item">Empregos</p>
-                <p class="footer-menu-item">For the Record</p>
-            </div>
-            <div class="communities">
-                <h3 class="footer-menu">Comunidades</h3>
-                <p class="footer-menu-item">Para Artistas</p>
-                <p class="footer-menu-item">Desenvolvedores</p>
-                <p class="footer-menu-item">Publicidade</p>
-                <p class="footer-menu-item">Investidores</p>
-                <p class="footer-menu-item">Fornecedores</p>
-            </div>
-            <div class="useful-links">
-                <h3 class="footer-menu">Suporte</h3>
-                <p class="footer-menu-item">Player da Web</p>
-                <p class="footer-menu-item">Empregos</p>
-                <p class="footer-menu-item">Aplicativo móvel grátis</p>
+            <div class="wrapFooterFirstPart">
+                <div class="company">
+                    <h3 class="footer-menu">Empresa</h3>
+                    <p class="footer-menu-item">Sobre</p>
+                    <p class="footer-menu-item">Empregos</p>
+                    <p class="footer-menu-item">For the Record</p>
+                </div>
+                <div class="communities">
+                    <h3 class="footer-menu">Comunidades</h3>
+                    <p class="footer-menu-item">Para Artistas</p>
+                    <p class="footer-menu-item">Desenvolvedores</p>
+                    <p class="footer-menu-item">Publicidade</p>
+                    <p class="footer-menu-item">Investidores</p>
+                    <p class="footer-menu-item">Fornecedores</p>
+                </div>
+                <div class="useful-links">
+                    <h3 class="footer-menu">Suporte</h3>
+                    <p class="footer-menu-item">Player da Web</p>
+                    <p class="footer-menu-item">Empregos</p>
+                    <p class="footer-menu-item">Aplicativo móvel grátis</p>
+                </div>
             </div>
         </div>
-
         <div class="social-media">
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-twitter"></i>
@@ -91,13 +92,13 @@
         </div>
 
         <div class="wrapFooterSecondPart">
-            <div>
+            <div class="footerBottomItems">
                 <p class="textFooter-2">Legal</p>
                 <p class="textFooter-2">Centro de Privacidade</p>
                 <p class="textFooter-2">Política de Privacidade</p>
                 <p class="textFooter-2">Cookies</p>
                 <p class="textFooter-2">Sobre Anúncios</p>
-                <p class="textFooter-2">cessibilidade</p>
+                <p class="textFooter-2">Acessibilidade</p>
             </div>
             <div>
                 <p class="textFooterCopyright">&copy 2023 Spotify AB</p>
