updated the twitter logo

--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
         </div>
         <div class="social-media">
             <i class="fa-brands fa-instagram"></i>
-            <i class="fa-brands fa-twitter"></i>
+            <i class="fa-brands fa-x-twitter"></i>
             <i class="fa-brands fa-facebook-f"></i>
         </div>
     </footer>
