--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <!-- font awesome -->
     <script src="https://kit.fontawesome.com/86afd65ab5.js" crossorigin="anonymous"></script>
     
-    <title>Spotify Clone</title>
+    <title>Música para todos | Spotify</title>
 </head>
 <body>
     <header class="header">
