added js file, feature to dropdown menu

--- a/index.html
+++ b/index.html
@@ -20,6 +20,9 @@
     <link rel="stylesheet" href="css/media.css">
 
     <title>Música para todos | Spotify</title>
+
+    <!-- js -->
+    <script src="script.js" defer></script>
 </head>
 <body>
     <header class="header">
@@ -28,13 +31,6 @@
         <!-- mobile first -->
         <nav>
             <i class="fa-solid fa-bars"></i>
-            <ul class="hide">
-                <li>Premium</li>
-                <li>Ajuda</li>
-                <li>Baixar</li>
-                <li>Inscreva-se</li>
-                <li>Entrar</li>
-            </ul>
         </nav>
             
         <!-- laptop screen -->
@@ -49,7 +45,7 @@
         </nav>
     </header>
 
-    <!-- when click in menu hamburger -->
+    <!-- when click in menu hamburger, mobile screen -->
     <section>
         <nav class="navMenuHamburger hide"> <!-- hide -->
             <ul class="menuHamburger"> 
