updated comments for dropdown menu

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         </nav>
     </header>
 
-    <!-- when click in menu hamburger, mobile screen -->
+    <!-- dropdown menu (hamburger), for mobile screen -->
     <section>
         <nav class="navMenuHamburger hide"> <!-- hide -->
             <ul class="menuHamburger"> 
